--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <script src="words.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <!--<script data-require="jquery@*" data-semver="2.0.3" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
@@ -27,7 +25,6 @@
 
             $(".row").remove();
 
-
             for (var i = 0; i < resultWords.length; i++) {
                 // for (var i = 0; i < 10; i++) {
                 var txtOsm = document.createTextNode(resultWords[i].Osm);
@@ -44,7 +41,6 @@
                 dCol1.setAttribute('class', "col-5");
                 dCol1.appendChild(hOsm);
 
-
                 var dCol2 = document.createElement('div');
                 dCol2.setAttribute('class', "col-5");
                 dCol2.appendChild(txtLatin);
@@ -60,7 +56,6 @@
                 var dCol3 = document.createElement('div');
                 dCol3.setAttribute('class', "col-2");
                 dCol3.appendChild(btnLoad);
-
 
                 dRow.appendChild(dCol1);
                 dRow.appendChild(dCol2);
@@ -108,22 +103,18 @@
 
             renderResults(search($('#search').val()));
              $('#search').focus();
-        }
-        ;
+        };
 
         function backspacePressed(){
             $('#search').val($('#search').val().substr(0, $('#search').val().length - 1 ));
 
             renderResults(search($('#search').val()));
             $('#search').focus();
-        }
+        };
 
     </script>
-
-
 </head>
 <body>
-
 <div>
     <br>
     <table align="center" border="0" class="tablo">
@@ -306,7 +297,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-body">
-                <img id="originalimg" src="imgs/a.jpg">
+                <img id="originalimg" src="">
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
