--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
 <div id="container" class="container">
     <div class="form-group">
-        <input type="text" class="form-control" id="search" placeholder="Arama">
+        <input type="text" class="form-control" id="search" placeholder="Arama (Arap veya Latin harfleriyle)">
     </div>
 </div>
 
