hemzeli vav eklendi

--- a/index.html
+++ b/index.html
@@ -210,8 +210,9 @@
             </td>
             <td align="center">&nbsp;
             </td>
-            <td align="center">&nbsp;
-            </td>
+            <td align="center">
+    <span lang="tr">
+    <input class="bt" onclick="osmKeyPressed(1572)" type="button" value="ؤ"></span></td>
             <td align="center">
     <span lang="tr">
 	<input class="bt" onclick="osmKeyPressed(1647)" type="button" value="ٯ"></span></td>
@@ -223,7 +224,7 @@
 	<input class="bt" onclick="osmKeyPressed(1574)" type="button" value="ئ"></span></td>
             <td align="center">
     <span lang="tr">
-	<input class="bt" onclick="osmKeyPressed(1609)" type="button" value="ى"></span></td>
+	<input class="bt" onclick="osmKeyPressed(1609)" type="button" value="ى"></span></td> 
             <td align="center">
     <span lang="tr">
 	<input class="bt" onclick="osmKeyPressed(1728)" type="button" value="ۀ"></span></td>
